# Lume

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  package-lock.json  package.json  vite.config.ts
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: aur.yml  build-desktop.yml  ci.yml  release.yml
assets/screenshots/: README.md
docs/: native-renderer-plan.md
packaging/aur/: .SRCINFO  PKGBUILD
scripts/: build-linux-compat.sh  fix-appimage.sh  install.sh  lume-shell-init.bash  lume-shell-init.fish  lume-shell-init.ps1  lume-shell-init.zsh  release.sh
src/: App.css  App.tsx  Autocomplete.tsx  BlocksPanel.tsx  CommandPalette.tsx  FileTree.tsx  PaneNode.tsx  PortableTerminal.tsx  RemoteDialog.tsx  Settings.tsx  SshPalette.tsx  Tabs.tsx  Terminal.tsx  UpdateBanner.tsx  WorkflowsPalette.tsx  ai.ts  blocks.ts  clipboard.ts  config.ts  fonts.ts  i18n.ts  icons.tsx  keybindings.ts  markdown.tsx  panes.ts  remote.ts  shellSetup.ts  ssh.ts  suggestions.ts  syntax.ts  themes.ts  updater.ts  workflows.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: ai.rs  complete.rs  config.rs  env_fix.rs  fonts.rs  lib.rs  native_grid.rs  notify.rs  osc.rs  paths.rs  pty.rs  remote.rs  shell.rs  ssh.rs  workflows.rs
src/i18n/: ar.ts  de.ts  es.ts  hi.ts  it.ts  ja.ts  ko.ts  nl.ts  pt.ts  ru.ts  tr.ts  zh.ts
