[package]
name = "lume"
version = "0.5.1"
description = "Fast, lightweight, open-source terminal — a private, local alternative to Warp"
authors = ["Hugo Mayonobe"]
license = "MIT"
repository = "https://github.com/hugomyb/Lume"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "lume_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
portable-pty = "0.8"
anyhow = "1"
base64 = "0.22"
parking_lot = "0.12"
toml = "0.8"
tauri-plugin-window-state = "2"
serde_yaml = "0.9.34"
ttf-parser = "0.25.1"
tauri-plugin-clipboard-manager = "2.3.2"
tauri-plugin-notification = "2.3.3"
notify-rust = "4"
axum = { version = "0.8.9", features = ["ws"] }
tokio = { version = "1.52.3", features = ["sync", "net", "rt-multi-thread", "macros", "io-util", "time"] }
futures-util = "0.3.32"
getrandom = "0.4"
tauri-plugin-updater = "2.10.1"
tauri-plugin-process = "2.3.1"
tauri-plugin-dialog = "2.7.1"
# Blocking HTTP client (rustls/ring → no OpenSSL, keeps the portable build) for
# the API-key AI providers (OpenAI-compatible streaming).
ureq = { version = "2", features = ["json"] }


# Read the optimization guideline for more details: https://tauri.app/concept/size/#cargo-configuration
[profile.release]
codegen-units = 1
lto = true
opt-level = 3
panic = "abort"
strip = true
